Update main.tex with new legal references and remove outdated sections
- Updated legal references in the table, including Ley Orgánica 8/1985 and Ley Orgánica 3/2020.
- Added new entries for Real Decreto 286/2023, Ley 27/2007, Real Decreto 1834/2008, and Real Decreto 443/2001.
- Removed outdated references to Real Decreto 984/2021.
- Adjusted the table of contents to reflect changes in sections.
- Deleted unused main.tex file from the Practicum directory.

--- a/Seminario1_Dustin_Randel_de_Lara_Garcia/main.tex
+++ b/Seminario1_Dustin_Randel_de_Lara_Garcia/main.tex
@@ -139,15 +139,20 @@ Rango & Identificación & Título & Fecha & Boletín \\
 
 \endlastfoot
 
-Ley Orgánica & Ley Orgánica 3/2020, de 29 de diciembre &
-Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación (LOMLOE) &
-30/12/2020 &
-BOE núm. 340 \cite{LOMLOE2020} \\ \hline
+Ley Orgánica & Ley Orgánica 8/1985, de 3 de julio &
+Ley Orgánica 8/1985, de 3 de julio, reguladora del Derecho a la Educación (LODE) &
+04/07/1985 &
+BOE núm. 159 \cite{LODE1985} \\ \hline
 
 Ley Orgánica & Ley Orgánica 2/2006, de 3 de mayo &
 Ley Orgánica 2/2006, de 3 de mayo, de Educación (LOE) &
 04/05/2006 &
 BOE núm. 106 \cite{LOE2006} \\ \hline
+
+Ley Orgánica & Ley Orgánica 3/2020, de 29 de diciembre &
+Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación (LOMLOE) &
+30/12/2020 &
+BOE núm. 340 \cite{LOMLOE2020} \\ \hline
 
 Real Decreto & Real Decreto 217/2022, de 29 de marzo &
 Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria &
@@ -158,11 +163,6 @@ Real Decreto & Real Decreto 243/2022, de 5 de abril &
 Real Decreto 243/2022, de 5 de abril, por el que se establecen la ordenación y las enseñanzas mínimas del Bachillerato &
 06/04/2022 &
 BOE núm. 82 \cite{RD243_2022} \\ \hline
-
-Real Decreto & Real Decreto 984/2021, de 16 de noviembre &
-Real Decreto 984/2021, de 16 de noviembre, por el que se regula la evaluación y la promoción en la Educación Primaria, así como la evaluación, la promoción y la titulación en la Educación Secundaria Obligatoria, el Bachillerato y la Formación Profesional &
-17/11/2021 &
-BOE núm. 275 \cite{RD984_2021} \\ \hline
 
 Ley Orgánica & Ley Orgánica 3/2018, de 5 de diciembre &
 Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales &
@@ -183,6 +183,27 @@ Ley & Ley 31/1995, de 8 de noviembre &
 Ley 31/1995, de 8 de noviembre, de Prevención de Riesgos Laborales &
 10/11/1995 &
 BOE núm. 269 \cite{Ley31_1995} \\ \hline
+
+Real Decreto & Real Decreto 286/2023, de 18 de abril &
+Real Decreto por el que se regula la asignación de materias en Educación Secundaria Obligatoria y en Bachillerato a las especialidades de distintos cuerpos de funcionarios docentes, y se modifican diversas normas relativas al profesorado de enseñanzas no universitarias &
+19/04/2023 &
+BOE núm. 93 \cite{RD286_2023} \\ \hline
+
+Ley & Ley 27/2007, de 23 de octubre &
+Ley por la que se reconocen las lenguas de signos españolas y se regulan los medios de apoyo a la comunicación oral de las personas sordas, con discapacidad auditiva y sordociegas &
+24/10/2007 &
+BOE núm. 255 \cite{Ley27_2007} \\ \hline
+
+Real Decreto & Real Decreto 1834/2008, de 8 de noviembre &
+Real Decreto por el que se definen las condiciones de formación para el ejercicio de la docencia en la educación secundaria obligatoria, el bachillerato, la formación profesional y las enseñanzas de régimen especial y se establecen las especialidades de los cuerpos docentes de enseñanza secundaria &
+28/11/2008 &
+BOE núm. 287 \cite{RD1834_2008} \\ \hline
+
+Real Decreto & Real Decreto 443/2001, de 27 de abril &
+Real Decreto sobre condiciones de seguridad en el transporte escolar y de menores &
+08/05/2001 &
+BOE núm. 110 \cite{RD443_2001} \\ \hline
+
 \caption{Recopilación de normativa a nivel estatal}
 \label{tab:recopilacion-normativa-estatal}
 \end{longtable}
@@ -220,6 +241,11 @@ Ley 1/2022, de 8 de marzo, de educación de las Illes Balears &
 17/03/2022 &
 BOIB núm. 38 \cite{Ley1_2022} \\ \hline
 
+Decreto & Decreto 4/2023, de 13 de febrero &
+Decreto 4/2023, de 13 de febrero, por el que se aprueba el Reglamento Orgánico de las escuelas infantiles públicas, los colegios de educación primaria, los colegios de educación infantil y primaria, los colegios de educación infantil y primaria integrados con enseñanzas elementales de música, los colegios de educación infantil y primaria integrados con educación secundaria y los institutos de educación secundaria de la Comunidad Autónoma de las Illes Balears &
+16/02/2023 &
+BOIB núm. 21 \cite{Decreto4_2023} \\ \hline
+
 Decreto & Decreto 42/2025, de 1 de agosto &
 Decreto 42/2025, de 1 de agosto, por el que se establecen la ordenación y el currículo de la Educación Secundaria Obligatoria en las Illes Balears y se modifica el Decreto 4/2023, de 13 de febrero &
 04/08/2025 &
@@ -234,11 +260,6 @@ Decreto & Decreto 121/2010, de 10 de diciembre &
 Decreto 121/2010, de 10 de diciembre, por el que se establecen los derechos y los deberes de los alumnos y las normas de convivencia en los centros docentes no universitarios sostenidos con fondos públicos de las Illes Balears &
 23/12/2010 &
 BOIB núm. 187 \cite{Decreto121_2010} \\ \hline
-
-Decreto & Decreto 4/2023, de 13 de febrero &
-Decreto 4/2023, de 13 de febrero, por el que se aprueba el Reglamento Orgánico de las escuelas infantiles públicas, los colegios de educación primaria, los colegios de educación infantil y primaria, los colegios de educación infantil y primaria integrados con enseñanzas elementales de música, los colegios de educación infantil y primaria integrados con educación secundaria y los institutos de educación secundaria de la Comunidad Autónoma de las Illes Balears &
-16/02/2023 &
-BOIB núm. 21 \cite{Decreto4_2023} \\ \hline
 
 Decreto & Decreto 9/2025, de 14 de marzo &
 Decreto 9/2025, de 14 de marzo, por el que se regula la delegación de protección de datos de la Administración de la Comunidad Autónoma de las Illes Balears &
@@ -257,13 +278,13 @@ BOIB núm. 140 \cite{Orden27_2025} \\ \hline
 
 Ley & Ley 11/2016, de 28 de julio &
 Ley 11/2016, de 28 de julio, de igualdad de mujeres y hombres &
-03/08/2016 &
-BOE núm. 184 \cite{Ley11_2016} \\ \hline
+04/08/2016 &
+BOIB núm. 99 \cite{Ley11_2016} \\ \hline
 
 Ley & Ley 8/2016, de 30 de mayo &
-Ley 8/2016, de 30 de mayo, para garantizar los derechos de lesbianas, gays, trans, bisexuales e intersexuales y para erradicar la LGTBI-fobia &
-01/06/2016 &
-BOE núm. 132 \cite{Ley8_2016} \\ \hline
+Ley 8/2016, de 30 de mayo, para garantizar los derechos de lesbianas, gays, trans, bisexuales e intersexuales y para erradicar la LGTBI fobia &
+02/06/2016 &
+BOIB núm. 69 \cite{Ley8_2016} \\ \hline
 
 Ley & Ley 9/2019, de 19 de febrero &
 Ley 9/2019, de 19 de febrero, de la atención y los derechos de la infancia y la adolescencia de las Illes Balears &
@@ -275,15 +296,15 @@ Decreto 39/2011, de 29 de abril, por el cual se regula la atención a la diversi
 05/05/2011 &
 BOIB núm. 67 \cite{Decreto39_2011} \\ \hline
 
+Ley & Ley 10/2022, de 23 de diciembre &
+Ley 10/2022, de 23 de diciembre, del tiempo libre educativo infantil y juvenil de las Illes Balears &
+29/12/2022 &
+BOIB núm. 169 \cite{Ley10_2022} \\ \hline
+
 Decreto & Decreto 18/2011, de 11 de marzo &
 Decreto 18/2011, de 11 de marzo, por el que se establecen los principios generales que rigen las actividades de tiempo libre infantiles y juveniles que se desarrollen en el ámbito territorial de las Illes Balears &
 17/03/2011 &
-BOIB núm. 41 \cite{Decreto18_2011} \\ \hline
-
-Ley & Ley 10/2022, de 23 de diciembre &
-Ley 10/2022, de 23 de diciembre, del tiempo libre educativo infantil y juvenil de las Illes Balears &
-08/03/2023 &
-BOE núm. 57 \cite{Ley10_2022} \\ \hline
+BOIB núm. 39 \cite{Decreto18_2011} \\ \hline
 
 Decreto & Decreto 30/2023, de 22 de mayo &
 Decreto 30/2023, de 22 de mayo, por el cual se regula el transporte escolar en los centros educativos públicos y en los centros de educación especial sostenidos con fondos públicos de las Illes Balears &
@@ -293,7 +314,7 @@ BOIB núm. 69 \cite{Decreto30_2023} \\ \hline
 Orden & Orden 12/2025, de 7 de mayo &
 Orden 12/2025, de 7 de mayo, del Consejero de Educación y Universidades por la cual se regula el uso de los teléfonos móviles y otros dispositivos electrónicos personales en los centros educativos no universitarios sostenidos total o parcialmente con fondos públicos de las Illes Balears &
 20/05/2025 &
-BOIB \cite{Orden12_2025} \\ \hline
+BOIB núm. 63 \cite{Orden12_2025} \\ \hline
 
 Resolución & Resolución de 9 de febrero de 2021 &
 Resolución del consejero de Educación, Universidad e Investigación de 9 de febrero de 2021 por la que se aprueba el Plan de Coeducación de las Illes Balears 2019–2022 &
@@ -306,9 +327,4 @@ BOIB núm. 31 \cite{Resolucion9_2021} \\ \hline
 
 \newpage
 \printbibliography
-
-\newpage
-\section{Anexo}\label{sec:anexo}
-\subsection{Anexo 1}
-Texto del anexo…
 \end{document}
