--- a/Seminario1_Dustin_Randel_de_Lara_Garcia/referencias.bib
+++ b/Seminario1_Dustin_Randel_de_Lara_Garcia/referencias.bib
@@ -1,20 +1,12 @@
-@book{Taylor,
-  added-at = {2008-09-01T10:19:03.000+0200},
-  asin = {093570275X},
-  author = {Taylor, John R.},
-  biburl = {https://www.bibsonomy.org/bibtex/203b32232e416c3ed7206a06d77c7a5e3/ljiang},
-  dewey = {530.16},
-  ean = {9780935702750},
-  edition = {2 Sub},
-  interhash = {c827b2121e2a39e4e93d4a1e25d0d712},
-  intrahash = {03b32232e416c3ed7206a06d77c7a5e3},
-  isbn = {093570275X},
-  keywords = {ErrorAnalysis},
-  publisher = {University Science Books},
-  timestamp = {2008-10-08T17:57:56.000+0200},
-  title = {An Introduction to Error Analysis: The Study of Uncertainties in Physical Measurements},
-  year = 1996
+@online{LODE1985,
+  title   = {Ley Orgánica 8/1985, de 3 de julio, reguladora del Derecho a la Educación (LODE)},
+  year    = {1985},
+  date    = {1985-07-04},
+  note    = {BOE núm. 159},
+  url     = {https://www.boe.es/buscar/act.php?id=BOE-A-1985-12978},
+  urldate = {2025-11-08}
 }
+
 @online{LOMLOE2020,
   author       = {{Gobierno de España}},
   title        = {Ley Orgánica 3/2020, de 29 de diciembre, por la que se modifica la Ley Orgánica 2/2006, de 3 de mayo, de Educación (LOMLOE)},
@@ -38,7 +30,7 @@
   title        = {Real Decreto 217/2022, de 29 de marzo, por el que se establece la ordenación y las enseñanzas mínimas de la Educación Secundaria Obligatoria},
   organization = {Boletín Oficial del Estado},
   date         = {2022-03-30},
-  url          = {https://www.boe.es/eli/es/rd/2022/03/29/217},
+  url          = {https://www.boe.es/eli/es/rd/2022/03/29/217/con},
   urldate      = {2025-11-05},
 }
 
@@ -47,16 +39,7 @@
   title        = {Real Decreto 243/2022, de 5 de abril, por el que se establecen la ordenación y las enseñanzas mínimas del Bachillerato},
   organization = {Boletín Oficial del Estado},
   date         = {2022-04-06},
-  url          = {https://www.boe.es/eli/es/rd/2022/04/05/243},
-  urldate      = {2025-11-05},
-}
-
-@online{RD984_2021,
-  author       = {{Gobierno de España}},
-  title        = {Real Decreto 984/2021, de 16 de noviembre, por el que se regula la evaluación y la promoción en la Educación Primaria, así como la evaluación, la promoción y la titulación en la Educación Secundaria Obligatoria, el Bachillerato y la Formación Profesional},
-  organization = {Boletín Oficial del Estado},
-  date         = {2021-11-17},
-  url          = {https://www.boe.es/eli/es/rd/2021/11/16/984},
+  url          = {https://www.boe.es/eli/es/rd/2022/04/05/243/con},
   urldate      = {2025-11-05},
 }
 
@@ -65,7 +48,7 @@
   title        = {Ley Orgánica 3/2018, de 5 de diciembre, de Protección de Datos Personales y garantía de los derechos digitales},
   organization = {Boletín Oficial del Estado},
   date         = {2018-12-06},
-  url          = {https://www.boe.es/eli/es/lo/2018/12/05/3},
+  url          = {https://www.boe.es/eli/es/lo/2018/12/05/3/con},
   urldate      = {2025-11-05},
 }
 
@@ -74,7 +57,7 @@
   title        = {Ley Orgánica 3/2007, de 22 de marzo, para la igualdad efectiva de mujeres y hombres},
   organization = {Boletín Oficial del Estado},
   date         = {2007-03-23},
-  url          = {https://www.boe.es/eli/es/lo/2007/03/22/3},
+  url          = {https://www.boe.es/eli/es/lo/2007/03/22/3/con},
   urldate      = {2025-11-05},
 }
 
@@ -83,7 +66,7 @@
   title        = {Real Decreto Legislativo 5/2015, de 30 de octubre, por el que se aprueba el texto refundido de la Ley del Estatuto Básico del Empleado Público},
   organization = {Boletín Oficial del Estado},
   date         = {2015-10-31},
-  url          = {https://www.boe.es/eli/es/rdlg/2015/10/30/5},
+  url          = {https://www.boe.es/eli/es/rdlg/2015/10/30/5/con},
   urldate      = {2025-11-05},
 }
 
@@ -92,9 +75,46 @@
   title        = {Ley 31/1995, de 8 de noviembre, de Prevención de Riesgos Laborales},
   organization = {Boletín Oficial del Estado},
   date         = {1995-11-10},
-  url          = {https://www.boe.es/eli/es/ley/1995/11/08/31},
+  url          = {https://www.boe.es/buscar/act.php?id=BOE-A-1995-24292},
   urldate      = {2025-11-05},
 }
+
+@online{RD286_2023,
+  author       = {{Gobierno de España}},
+  title        = {Real Decreto 286/2023, de 18 de abril, por el que se regula la asignación de materias en Educación Secundaria Obligatoria y en Bachillerato a las especialidades de distintos cuerpos de funcionarios docentes, y se modifican diversas normas relativas al profesorado de enseñanzas no universitarias},
+  organization = {Boletín Oficial del Estado},
+  date         = {2023-04-19},
+  url          = {https://www.boe.es/eli/es/rd/2023/04/18/286/con},
+  urldate      = {2025-11-06},
+}
+
+@online{Ley27_2007,
+  author       = {{Gobierno de España}},
+  title        = {Ley 27/2007, de 23 de octubre, por la que se reconocen las lenguas de signos españolas y se regulan los medios de apoyo a la comunicación oral de las personas sordas, con discapacidad auditiva y sordociegas},
+  organization = {Boletín Oficial del Estado},
+  date         = {2007-10-24},
+  url          = {https://www.boe.es/eli/es/l/2007/10/23/27/con},
+  urldate      = {2025-11-06},
+}
+
+@online{RD1834_2008,
+  author       = {{Gobierno de España}},
+  title        = {Real Decreto 1834/2008, de 8 de noviembre, por el que se definen las condiciones de formación para el ejercicio de la docencia en la educación secundaria obligatoria, el bachillerato, la formación profesional y las enseñanzas de régimen especial y se establecen las especialidades de los cuerpos docentes de enseñanza secundaria},
+  organization = {Boletín Oficial del Estado},
+  date         = {2008-11-28},
+  url          = {https://www.boe.es/eli/es/rd/2008/11/08/1834/con},
+  urldate      = {2025-11-06},
+}
+
+@online{RD443_2001,
+  author       = {{Gobierno de España}},
+  title        = {Real Decreto 443/2001, de 27 de abril, sobre condiciones de seguridad en el transporte escolar y de menores},
+  organization = {Boletín Oficial del Estado},
+  date         = {2001-05-08},
+  url          = {https://www.boe.es/eli/es/rd/2001/04/27/443/con},
+  urldate      = {2025-11-06},
+}
+
 %segunda tabla ---------------------------------------------------------------------------------------------------------------------
 
 @online{LO1_2007,
@@ -111,34 +131,7 @@
   title        = {Ley 1/2022, de 8 de marzo, de educación de las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2022-03-17},
-  url          = {https://www.boe.es/buscar/doc.php?id=BOE-A-2022-9385},
-  urldate      = {2025-11-06},
-}
-
-@online{Decreto42_2025,
-  author       = {{Govern de les Illes Balears}},
-  title        = {Decreto 42/2025, de 1 de agosto, por el que se establecen la ordenación y el currículo de la Educación Secundaria Obligatoria en las Illes Balears y se modifica el Decreto 4/2023, de 13 de febrero},
-  organization = {Butlletí Oficial de les Illes Balears},
-  date         = {2025-08-04},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2025/103/1174530},
-  urldate      = {2025-11-06},
-}
-
-@online{Decreto43_2025,
-  author       = {{Govern de les Illes Balears}},
-  title        = {Decreto 43/2025, de 1 de agosto, por el que se establecen la ordenación y el currículo del Bachillerato en las Illes Balears},
-  organization = {Butlletí Oficial de les Illes Balears},
-  date         = {2025-08-04},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2025/103/1174531},
-  urldate      = {2025-11-06},
-}
-
-@online{Decreto121_2010,
-  author       = {{Govern de les Illes Balears}},
-  title        = {Decreto 121/2010, de 10 de diciembre, por el que se establecen los derechos y los deberes de los alumnos y las normas de convivencia en los centros docentes no universitarios sostenidos con fondos públicos de las Illes Balears},
-  organization = {Butlletí Oficial de les Illes Balears},
-  date         = {2010-12-23},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2010/187/116465},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/l/2022/03/08/1/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -147,7 +140,34 @@
   title        = {Decreto 4/2023, de 13 de febrero, por el que se aprueba el Reglamento Orgánico de las escuelas infantiles públicas, los colegios de educación primaria, los colegios de educación infantil y primaria integrados con enseñanzas elementales de música, los colegios de educación infantil y primaria integrados con educación secundaria y los institutos de educación secundaria de la Comunidad Autónoma de las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2023-02-16},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2023/21/1129856},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/d/2023/02/13/4/dof/spa/html},
+  urldate      = {2025-11-06},
+}
+
+@online{Decreto42_2025,
+  author       = {{Govern de les Illes Balears}},
+  title        = {Decreto 42/2025, de 1 de agosto, por el que se establecen la ordenación y el currículo de la Educación Secundaria Obligatoria en las Illes Balears y se modifica el Decreto 4/2023, de 13 de febrero},
+  organization = {Butlletí Oficial de les Illes Balears},
+  date         = {2025-08-04},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/d/2025/08/01/42/dof/spa/html},
+  urldate      = {2025-11-06},
+}
+
+@online{Decreto43_2025,
+  author       = {{Govern de les Illes Balears}},
+  title        = {Decreto 43/2025, de 1 de agosto, por el que se establecen la ordenación y el currículo del Bachillerato en las Illes Balears},
+  organization = {Butlletí Oficial de les Illes Balears},
+  date         = {2025-08-04},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/d/2025/08/01/43/dof/spa/html},
+  urldate      = {2025-11-06},
+}
+
+@online{Decreto121_2010,
+  author       = {{Govern de les Illes Balears}},
+  title        = {Decreto 121/2010, de 10 de diciembre, por el que se establecen los derechos y los deberes de los alumnos y las normas de convivencia en los centros docentes no universitarios sostenidos con fondos públicos de las Illes Balears},
+  organization = {Butlletí Oficial de les Illes Balears},
+  date         = {2010-12-23},
+  url          = {https://www.caib.es/eboibfront/es/2010/7585/},
   urldate      = {2025-11-06},
 }
 
@@ -156,7 +176,7 @@
   title        = {Decreto 9/2025, de 14 de marzo, por el que se regula la delegación de protección de datos de la Administración de la Comunidad Autónoma de las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2025-03-15},
-  url          = {https://www.caib.es/sites/institutestudisautonomics/es/n/decreto_92025_de_14_de_marzo_por_el_que_se_regula_la_delegacian_de_proteccian_de_datos_de_la_administracian_de_la_comunidad_autanoma_de_las_illes_balears/},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/d/2025/03/14/9/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -165,7 +185,7 @@
   title        = {Orden 26/2025, de 21 de octubre, del consejero de Educación y Universidades sobre la evaluación del aprendizaje de los alumnos del Bachillerato en las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2025-10-23},
-  url          = {https://www.caib.es/eboibfront/eli/es-ib/o/2025/10/21/26/dof/spa/xml},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/o/2025/10/21/26/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -174,7 +194,7 @@
   title        = {Orden 27/2025, de 21 de octubre, del consejero de Educación y Universidades sobre la evaluación del aprendizaje de los alumnos de la Educación Secundaria Obligatoria en las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2025-10-23},
-  url          = {https://www.caib.es/eboibfront/eli/es-ib/o/2025/10/21/27/dof/spa/xml},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/o/2025/10/21/27/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -182,8 +202,8 @@
   author       = {{Govern de les Illes Balears}},
   title        = {Ley 11/2016, de 28 de julio, de igualdad de mujeres y hombres},
   organization = {Boletín Oficial del Estado},
-  date         = {2016-08-03},
-  url          = {https://www.boe.es/buscar/act.php?id=BOE-A-2016-7994},
+  date         = {2016-08-04},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/l/2016/07/28/11/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -192,7 +212,7 @@
   title        = {Ley 8/2016, de 30 de mayo, para garantizar los derechos de lesbianas, gays, trans, bisexuales e intersexuales y para erradicar la LGTBI-fobia},
   organization = {Boletín Oficial del Estado},
   date         = {2016-06-01},
-  url          = {https://www.boe.es/buscar/act.php?id=BOE-A-2016-6310},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/l/2016/05/30/8/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -201,7 +221,7 @@
   title        = {Ley 9/2019, de 19 de febrero, de la atención y los derechos de la infancia y la adolescencia de las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2019-02-28},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2019/26/1039777},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/l/2019/02/19/9/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -210,7 +230,16 @@
   title        = {Decreto 39/2011, de 29 de abril, por el cual se regula la atención a la diversidad y la orientación educativa en los centros educativos no universitarios sostenidos con fondos públicos},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2011-05-05},
-  url          = {https://www.caib.es/sites/institutestudisautonomics/ca/n/decret_392011_de_29_dabril_pel_qual_es_regula_latencio_a_la_diversitat_i_lorientacio_educativa_als_centres_educatius_no_universitaris_sostinguts_amb_fons_publics-59795/},
+  url          = {https://www.caib.es/eboibfront/es/2011/7657/},
+  urldate      = {2025-11-06},
+}
+
+@online{Ley10_2022,
+  author       = {{Govern de les Illes Balears}},
+  title        = {Ley 10/2022, de 23 de diciembre, del tiempo libre educativo infantil y juvenil de las Illes Balears},
+  organization = {Boletín Oficial del Estado},
+  date         = {2022-12-29},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/l/2022/12/23/10/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -219,16 +248,7 @@
   title        = {Decreto 18/2011, de 11 de marzo, por el que se establecen los principios generales que rigen las actividades de tiempo libre infantiles y juveniles que se desarrollen en el ámbito territorial de las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2011-03-17},
-  url          = {https://www.caib.es/sites/puntdinformacioambiental/es/n/decreto_182011_de_11_de_marzo_por_el_cual_se_establecen_los_principios_generales_que_rigen_las_actividades_de_tiempo_libre_infantiles_y_juveniles_que_se_desarrollen_en_el_ambito_territorial_de_las_islas_baleares-50493/},
-  urldate      = {2025-11-06},
-}
-
-@online{Ley10_2022,
-  author       = {{Govern de les Illes Balears}},
-  title        = {Ley 10/2022, de 23 de diciembre, del tiempo libre educativo infantil y juvenil de las Illes Balears},
-  organization = {Boletín Oficial del Estado},
-  date         = {2023-03-08},
-  url          = {https://www.boe.es/buscar/act.php?id=BOE-A-2023-2979},
+  url          = {https://www.caib.es/eboibfront/es/2011/7629/},
   urldate      = {2025-11-06},
 }
 
@@ -237,7 +257,7 @@
   title        = {Decreto 30/2023, de 22 de mayo, por el cual se regula el transporte escolar en los centros educativos públicos y en los centros de educación especial sostenidos con fondos públicos de las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2023-05-25},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2023/69/1134085},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/d/2023/05/22/30/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -246,7 +266,7 @@
   title        = {Orden 12/2025, de 7 de mayo, del Consejero de Educación y Universidades por la cual se regula el uso de los teléfonos móviles y otros dispositivos electrónicos personales en los centros educativos no universitarios sostenidos total o parcialmente con fondos públicos de las Illes Balears},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2025-05-20},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2025/63/1171800},
+  url          = {https://www.caib.es/eboibfront/eli/es-ib/o/2025/05/07/12/dof/spa/html},
   urldate      = {2025-11-06},
 }
 
@@ -255,7 +275,7 @@
   title        = {Resolución de 9 de febrero de 2021 por la que se aprueba el Plan de Coeducación de las Illes Balears 2019–2022},
   organization = {Butlletí Oficial de les Illes Balears},
   date         = {2021-03-04},
-  url          = {https://www.caib.es/eboibfront/pdf/es/2021/31/1104551},
+  url          = {https://www.caib.es/eboibfront/es/2021/11348/645404/resolucion-del-consejero-de-educacion-universidad-},
   urldate      = {2025-11-06},
 }
 
