Refactor seminar document structure and content
- Updated the LaTeX document to improve formatting and organization of the title page and table of contents.
- Revised section titles and added new subsections for clarity.
- Enhanced the content of the objectives section to provide a clearer overview of the seminar's goals.
- Removed redundant font input lines and ensured proper font loading in the document.
- Adjusted the PDF output to reflect the changes in structure and content.

--- a/Seminario2_Dustin_Randel_de_Lara_Garcia/Seminario2_Dustin_Randel_de_Lara_Garcia.tex
+++ b/Seminario2_Dustin_Randel_de_Lara_Garcia/Seminario2_Dustin_Randel_de_Lara_Garcia.tex
@@ -69,34 +69,38 @@
 
 % ---- Portada
 \begin{center}
-  {\includegraphics[width=0.5\textwidth]{icono_uned.jpg}\par}
-  \vspace{1cm}
-  {\bfseries\LARGE Universidad Nacional de Educación a Distancia \par}
-  \vspace{1cm}
-  {\scshape\Large Facultad de Educación\par}
+  \includegraphics[width=0.32\textwidth]{icono_uned.jpg}\par
+  \vspace{0.3cm}
+  {\bfseries\large Universidad Nacional de Educación a Distancia \par}
+  {\scshape Facultad de Educación – Máster en Formación del Profesorado\par}
+  \vspace{0.4cm}
+  {\scshape Prácticum – Seminario II\par}
+  \vspace{0.4cm}
+  {\itshape\large Formación permanente del profesorado de secundaria/FP: El caso Erasmus+\par}
   \vspace{0.5cm}
-  {\scshape\Large Máster en Formación del Profesorado\par}
-  \vspace{0.5cm}
-  {\scshape\Large Prácticum \par}
-  \vspace{1.5cm}
-  {\scshape\Huge Formación permanente del profesorado de secundaria/FP: El caso Erasmus+ \par}
-  \vspace{1.5cm}
-  {\itshape\Large Seminario II \par}
-  \vfill
-  {\Large Dustin Randel De Lara García \par}
-  \vfill
-  {\Large \today \par}
-  \thispagestyle{empty}
+  {\large Dustin Randel De Lara García \par}
+  {\large \today \par}
 \end{center}
 
-% ---- Índice
-\newpage
+\vspace{0.5cm}
+\hrule
+
+\renewcommand{\contentsname}{Índice de contenidos}
 \tableofcontents
-\newpage
 
 \section{Objetivos}\label{sec:objetivos}
+El presente seminario tiene como objetivo principal presentar las distintas vías de formación permanente disponibles para el profesorado de educación secundaria y formación profesional. A lo largo del seminario se abordará el papel que desempeña la formación continua en el desarrollo profesional docente y las principales iniciativas que la impulsan.
 
-\section{Sección 1 ...}\label{sec:section-1}
+Se prestará especial atención al programa Erasmus+, como ejemplo destacado de formación internacional orientada a la movilidad del profesorado. En particular, se analizarán las actividades de observación en el aula (job shadowing) y su relevancia para el intercambio de buenas prácticas entre centros europeos.
+
+En los siguientes apartados se presentarán las características del proyecto Erasmus+ elegido como caso de estudio y la posible aplicación de las competencias adquiridas a la práctica docente, mediante la exposición de diversos supuestos teóricos.
+\section{Características del proyecto}\label{sec:caracteristicas-del-proyecto}
+
+\section{¿Porqué es interesante este proyecto?}\label{sec:porque-es-interesante}
+\subsection{Aportación a la formación permanente del profesorado de secundaria}\label{subsec:aportacion-a-la-formacion-permanente-del-profesorado-de-secundaria}
+\section{Transferencia del aprendizaje adquirido en Erasmus+ a la realidad de la práctica docente cotidiana}\label{sec:Transferencia-aprendizaje}
+\section{¿Cómo crees que aplicarías las habilidades y conocimientos adquiridos en Erasmus+ en tu día a día?}\label{sec:aplicacion-dia-a-dia}
+\section{Posibles contextos de aplicación de las habilidades adquiridas en Erasmus+}\label{sec:posibles-contextos-de-aplicación}
 
 \newpage
 \printbibliography
