Refactor seminar document: Update content, structure, and references
- Revised the seminar document to include a detailed analysis of the Erasmus+ KA122-SCH project "Watering our Future" from IES Isla Verde.
- Enhanced the section on project characteristics and its relevance to professional development.
- Added subsections on mobility activities and their connection to the Diverciencia science fair.
- Improved the table of contents to reflect the new structure.
- Expanded the bibliography with additional references related to the project and its context.
- Updated the transfer of learning section to emphasize practical applications in teaching Physics and Chemistry.

--- a/Seminario2_Dustin_Randel_de_Lara_Garcia/Seminario2_Dustin_Randel_de_Lara_Garcia.tex
+++ b/Seminario2_Dustin_Randel_de_Lara_Garcia/Seminario2_Dustin_Randel_de_Lara_Garcia.tex
@@ -88,20 +88,142 @@
 \renewcommand{\contentsname}{Índice de contenidos}
 \tableofcontents
 
-\section{Objetivos}\label{sec:objetivos}
-El presente seminario tiene como objetivo principal presentar las distintas vías de formación permanente disponibles para el profesorado de educación secundaria y formación profesional. A lo largo del seminario se abordará el papel que desempeña la formación continua en el desarrollo profesional docente y las principales iniciativas que la impulsan.
+\section*{Proyecto Erasmus+ KA122-SCH «Watering our Future» (IES Isla Verde, Algeciras): 2021-1-ES01-KA122-SCH-000015629}
 
-Se prestará especial atención al programa Erasmus+, como ejemplo destacado de formación internacional orientada a la movilidad del profesorado. En particular, se analizarán las actividades de observación en el aula (job shadowing) y su relevancia para el intercambio de buenas prácticas entre centros europeos.
+En este seminario analizo un proyecto real del programa Erasmus+ que se sitúa en la acción clave de movilidad de individuos (KA1) y que, además, se vincula explícitamente con una feria de ciencia. Como futuro profesor de Física y Química en secundaria, me interesa explorar cómo este tipo de experiencias internacionales pueden traducirse en cambios concretos en mi práctica docente, más allá del viaje o de la anécdota.
 
-En los siguientes apartados se presentarán las características del proyecto Erasmus+ elegido como caso de estudio y la posible aplicación de las competencias adquiridas a la práctica docente, mediante la exposición de diversos supuestos teóricos.
+El caso seleccionado es el proyecto KA122-SCH «Mójate por la educación / Watering our Future, promoviendo la inclusión, la sostenibilidad medioambiental y la calidad de la enseñanza con formación en innovación educativa y desarrollo de las lenguas», desarrollado por el IES Isla Verde (Algeciras, España)\parencite{iesislaverde_k122_2021,sepie_ka122_2021}. Es un proyecto de corta duración KA122 para educación escolar, centrado en la formación del profesorado y en la movilidad de alumnado en torno a la sostenibilidad del agua, la innovación metodológica y el desarrollo de lenguas extranjeras.
+
+Mi objetivo es, por un lado, describir las características del centro y del proyecto y justificar por qué lo considero relevante para mi formación permanente a la luz de los objetivos de Erasmus+\parencite{ec_guide_2022,ec_keyaction1_2025}. Por otro, reflexiono sobre la transferencia del aprendizaje a mi futura práctica docente de Física y Química, planteando contextos concretos en los que las competencias trabajadas (metodologías activas, inclusión, dimensión europea, sostenibilidad, etc.) pueden materializarse en el aula y, en particular, en ferias de ciencia como Diverciencia\parencite{fundacionDescubre_redDiverciencia_2025}.
+
 \section{Características del proyecto}\label{sec:caracteristicas-del-proyecto}
 
-\section{¿Porqué es interesante este proyecto?}\label{sec:porque-es-interesante}
+En la solicitud del proyecto se organizan las caracteristicas en varios ejes, que resumo a continuación\parencite{islaVerde_KA122_application_2021}:
+
+\begin{itemize}
+  \item \textbf{Competencia digital del profesorado}. Mejorar el uso de herramientas TIC para crear y gestionar materiales en línea (plataformas educativas, recursos interactivos, actividades evaluables), de modo que la docencia pueda combinar elementos presenciales y virtuales.
+  \item \textbf{Metodologías innovadoras e inclusivas}. Avanzar hacia un modelo basado en \emph{blended learning}, \emph{flipped classroom} y aprendizaje basado en proyectos cooperativos, con especial atención al alumnado con mayores dificultades de acceso al currículo.
+  \item \textbf{Internacionalización y lenguas extranjeras}. Reforzar el uso del inglés y el francés como lenguas de trabajo, tanto del profesorado como del alumnado, y consolidar la dimensión europea del centro mediante movilidades y proyectos compartidos con otros países.
+  \item \textbf{Apertura a otros modelos educativos}. Ofrecer al profesorado oportunidades de observar prácticas docentes en centros europeos y de adaptar después esas propuestas al contexto del proyecto.
+  \item \textbf{Sostenibilidad y cambio climático}. Profundizar en el compromiso con el medio ambiente tomando el agua como eje temático, en coherencia con la Agenda 2030 y con programas ambientales ya presentes en el centro (ecoescuela, programa Aldea, «Recapacicla»)\parencite{islaVerde_KA122_application_2021}.
+\end{itemize}
+
+Para dar continuidad a estos objetivos se diseña en paralelo un proyecto eTwinning con el mismo nombre, dirigido al alumnado de 4.º de ESO y reconocido con un sello de calidad europeo. Este proyecto funciona como soporte virtual y espacio de colaboración entre los tres países participantes, y permite mantener el trabajo conjunto más allá de las movilidades físicas\parencite{islaVerde_etwinning_waterfuture_2022}.
+
+\subsection*{Actividades de movilidad y formación}
+
+El plan de trabajo combina formación estructurada, estancias de observación y movilidades de grupo\parencite{islaVerde_KA122_application_2021}:
+
+\begin{itemize}
+  \item \textbf{Formación en cursos estructurados}. Varios docentes participan en cursos centrados en competencias digitales, metodologías activas e inclusión. El compromiso explícito es que, a su regreso, adapten estas propuestas a sus materias y las compartan con el resto del claustro mediante sesiones internas de difusión.
+  
+  \item \textbf{Estancias de \emph{job shadowing}}. El profesorado realiza periodos de observación en dos centros socios:
+  \begin{itemize}
+    \item el \emph{Liceo Scientifico Cocito} (Alba, Italia), y 
+    \item el \emph{Slezské Gymnázium} (Opava, República Checa)\parencite{islaVerde_recepcion_opava_2022}.
+  \end{itemize}
+  Durante estas estancias se observa, entre otros aspectos:
+  \begin{itemize}
+    \item la organización de los laboratorios de ciencias y el tipo de actividades experimentales que se realizan;
+    \item la manera de articular proyectos interdisciplinares de sostenibilidad;
+    \item las estrategias de atención a la diversidad en el aula y el uso de metodologías cooperativas.
+  \end{itemize}
+  De forma recíproca, el proyecto contempla que el IES Isla Verde muestre a sus socios proyectos ambientales propios (ecohuerto escolar, iniciativas del programa Aldea), concebidos también como contextos de observación profesional\parencite{islaVerde_KA122_application_2021}.
+  
+  \item \textbf{Movilidades de alumnado en grupo}. El proyecto prevé movilidades de grupos de estudiantes de 4.º de ESO que trabajan conjuntamente en tareas sobre sostenibilidad del agua y divulgación científica\parencite{islaVerde_KA122_application_2021}. Un ejemplo concreto es la visita del \emph{Slezské Gymnázium} a Algeciras en mayo de 2022:
+  \begin{itemize}
+    \item el alumnado checo se aloja con familias del IES Isla Verde;
+    \item realiza actividades conjuntas en el centro en torno a la temática del agua;
+    \item visita la planta potabilizadora del río de la Miel para conocer el proceso de tratamiento del agua antes de su consumo;
+    \item recorre el Museo Municipal de Algeciras, conectando contenidos de ciencias y cultura local;
+    \item y dedica una jornada completa a la feria de ciencia Diverciencia\parencite{islaVerde_recepcion_opava_2022}.
+  \end{itemize}
+\end{itemize}
+
+\subsection*{Relación con la feria de ciencia Diverciencia}
+
+Diverciencia es una feria internacional de ciencia en la calle que se celebra anualmente en Algeciras, donde decenas de centros educativos presentan en stands los proyectos científicos trabajados durante el curso\parencite{fundacionDescubre_redDiverciencia_2025}. Según los datos de la Red de Ferias de la Ciencia y la Innovación de Andalucía, la feria reúne alrededor de un centenar de stands y a varios miles de estudiantes divulgadores, convirtiendo durante unos días plazas y parques de la ciudad en un espacio de experimentación abierto al público general\parencite{fundacionDescubre_redDiverciencia_2025}.
+
+En el marco del proyecto KA122 «Watering our Future», Diverciencia se utiliza como escaparate de los productos generados: stands sobre agua y sostenibilidad, experiencias de laboratorio adaptadas a formato divulgativo y, en algunos casos, materiales bilingües preparados conjuntamente por alumnado español y checo\parencite{islaVerde_recepcion_opava_2022}. La jornada de visita de los socios de Opava a la feria se plantea explícitamente como una actividad de observación y de intercambio de buenas prácticas, en la que profesorado y alumnado visitante pueden ver cómo se integran la sostenibilidad, la experimentación y la comunicación científica en un evento abierto a toda la comunidad\parencite{islaVerde_recepcion_opava_2022,fundacionDescubre_redDiverciencia_2025}.
+
+\section{¿Por qué es interesante este proyecto?}\label{sec:porque-es-interesante}
+
+El proyecto me resulta especialmente interesante porque conecta de forma directa con los objetivos generales de Erasmus+ y con una visión exigente de la formación permanente del profesorado.
+
+En primer lugar, responde bien a las prioridades de la acción clave KA1: la movilidad no se concibe como un fin en sí mismo, sino como un medio para transformar la organización educativa. La Comisión Europea insiste en que la movilidad debe generar centros más abiertos a nuevas metodologías, capaces de integrar buenas prácticas en su funcionamiento cotidiano y de planificar estratégicamente el desarrollo profesional de su profesorado\parencite{ec_guide_2022,ec_keyaction1_2025}. El proyecto del IES Isla Verde encaja con esta filosofía: las estancias formativas y de \emph{job shadowing} se insertan en un plan de mejora en torno a la digitalización, la inclusión y la sostenibilidad\parencite{iesislaverde_k122_2021}.
+
+En segundo lugar, el tema del agua y la sostenibilidad medioambiental se conecta de manera natural con el currículo de Física y Química. Desde la física, permite trabajar la energía hidráulica, el trabajo y la potencia, la mecánica de fluidos o la eficiencia energética; desde la química, plantea problemas de contaminación del agua, tratamiento de aguas residuales, química verde, disoluciones o equilibrio químico. Este enfoque contextualizado favorece una enseñanza de la ciencia con sentido social, alineada con la Agenda 2030\parencite{ec_guide_2022}.
+
+En tercer lugar, la participación en Diverciencia introduce una dimensión que considero crucial: la comunicación pública de la ciencia. No se trata solo de que el alumnado domine contenidos de Física y Química, sino de que aprenda a diseñar experimentos, elaborar materiales informativos, explicarlos a públicos diversos y responder a preguntas, tal como ocurre en esta feria\parencite{diverciencia_web,cadenaser_diverciencia2025}. Esta competencia comunicativa es cada vez más importante en educación secundaria.
+
+Finalmente, valoro que el proyecto se desarrolle en un instituto de características relativamente comunes: diversidad sociocultural, combinación de ESO, Bachillerato y FP, y recursos ajustados pero bien aprovechados\parencite{iesislaverde_k122_2021}. No se trata de un centro “de élite”, sino de un contexto replicable. Puedo imaginar un proyecto similar en un futuro centro, adaptando el eje temático (agua, energía, cambio climático) y la modalidad de participación en ferias de ciencia locales, autonómicas o internacionales.
+
 \subsection{Aportación a la formación permanente del profesorado de secundaria}\label{subsec:aportacion-a-la-formacion-permanente-del-profesorado-de-secundaria}
-\section{Transferencia del aprendizaje adquirido en Erasmus+ a la realidad de la práctica docente cotidiana}\label{sec:Transferencia-aprendizaje}
-\section{¿Cómo crees que aplicarías las habilidades y conocimientos adquiridos en Erasmus+ en tu día a día?}\label{sec:aplicacion-dia-a-dia}
+
+Desde la perspectiva de la formación permanente, este proyecto ilustra bien que el desarrollo profesional docente no consiste solo en acumular cursos, sino en generar cambios sostenidos en la cultura pedagógica del centro. Las movilidades se ponen al servicio de prioridades estratégicas (digitalización, inclusión, sostenibilidad) que se concretan en planes de trabajo y en compromisos de transferencia interna\parencite{ec_guide_2022,iesislaverde_k122_2021}.
+
+Para mí, participar en un proyecto de estas características significaría:
+
+\begin{itemize}
+  \item Contrastar mi práctica con la de otros centros europeos, observando de primera mano cómo organizan el laboratorio, gestionan la diversidad o integran la sostenibilidad en sus proyectos científicos.
+  \item Recibir formación específica en metodologías directamente relacionadas con mi materia (ABP, trabajo cooperativo, CLIL) y asumir la responsabilidad de adaptar y compartir estas propuestas con el departamento.
+  \item Desarrollar competencias transversales (trabajo en equipo, comunicación intercultural, gestión de proyectos) necesarias para impulsar iniciativas de innovación a medio y largo plazo.
+\end{itemize}
+
+El proyecto, por tanto, no solo ofrece actualización didáctica, sino que sitúa al profesorado en un rol activo dentro de la comunidad educativa, al tener que liderar acciones de difusión y aplicación de lo aprendido.
+
+\section{Transferencia del aprendizaje a la práctica docente cotidiana}\label{sec:Transferencia-aprendizaje}
+
+Entiendo la transferencia del aprendizaje como el proceso mediante el cual lo vivido en el proyecto Erasmus+ se incorpora a la práctica docente cotidiana, impactando en la experiencia del alumnado y en la cultura profesional del centro. En mi caso, esta transferencia se concretaría en varias líneas.
+
+En primer lugar, el uso sistemático del aprendizaje basado en proyectos (ABP) en Física y Química. Trabajar en torno a un producto final —por ejemplo, un stand de feria de ciencia sobre energía del agua o sobre la calidad del agua en el instituto— encaja con la filosofía del proyecto y con los objetivos de Diverciencia\parencite{diverciencia_descubre,cadenaser_diverciencia2025}. Algunas unidades se podrían diseñar como miniproyectos que culminan en exposiciones públicas en el centro o en eventos externos.
+
+En segundo lugar, el trabajo cooperativo y la inclusión. La observación de buenas prácticas de agrupamiento heterogéneo, reparto de roles y tareas multinivel en los centros socios me permitiría reorganizar el laboratorio de Física y Química de modo que todo el alumnado tenga un papel significativo, con distintos niveles de profundización en un mismo experimento\parencite{iesislaverde_k122_2021}.
+
+En tercer lugar, la integración de la competencia digital. La formación en herramientas TIC para la enseñanza de las ciencias (simulaciones, laboratorios virtuales, hojas de cálculo, plataformas colaborativas) se traduciría en un uso regular de estos recursos tanto para la investigación experimental como para la creación de productos de divulgación (pósteres, infografías, vídeos), que podrían presentarse en las ferias científicas del centro.
+
+Por último, la dimensión lingüística y europea del proyecto me animaría a introducir pequeñas dosis de enseñanza bilingüe: glosarios de términos científicos en inglés, lectura guiada de textos breves y presentación parcial de los stands de feria en lengua extranjera\parencite{ec_guide_2022}. No se trataría de convertir la materia en bilingüe, sino de aprovechar la dimensión internacional del proyecto para que el alumnado use el inglés como lengua de comunicación científica.
+
+\section{Aplicación de las habilidades y conocimientos en mi día a día}\label{sec:aplicacion-dia-a-dia}
+
+Si participara en un proyecto como «Mójate por la educación / Watering our Future», las habilidades y conocimientos adquiridos se reflejarían en mi día a día a través de decisiones concretas de planificación, organización y evaluación.
+
+En la \textbf{planificación}, procuraría que cada curso incluyera al menos un proyecto con producto final divulgativo relacionado con la sostenibilidad (agua, energía, cambio climático), pensado para una audiencia más amplia que la propia clase. Estos proyectos serían la base para participar en ferias de ciencia internas o externas, siguiendo el modelo de Diverciencia\parencite{diverciencia_web,diverciencia_descubre}.
+
+En la \textbf{organización de aula}, aplicaría lo aprendido sobre trabajo cooperativo e inclusión: grupos heterogéneos, roles definidos, materiales graduados y estaciones de aprendizaje con distintos niveles de dificultad. La idea sería que el laboratorio de Física y Química se convierta en un espacio donde alumnado con perfiles diversos pueda participar activamente y sentirse competente\parencite{iesislaverde_k122_2021}.
+
+En la \textbf{evaluación}, incorporaría instrumentos que recojan no solo conocimientos conceptuales, sino también competencias científicas y comunicativas: rúbricas para valorar la calidad de los experimentos, de las explicaciones orales y de los materiales divulgativos; autoevaluaciones y coevaluaciones; y momentos de reflexión sobre lo aprendido a lo largo del proyecto.
+
+Además, trataría de mantener viva la \textbf{dimensión europea} mediante actividades puntuales de contacto con otros centros (por ejemplo, pequeños proyectos eTwinning), el uso de recursos en lengua inglesa y la comparación de datos científicos de nuestro entorno con los de otros países\parencite{ec_keyaction1_2025,iesislaverde_k122_2021}.
+
 \section{Posibles contextos de aplicación de las habilidades adquiridas en Erasmus+}\label{sec:posibles-contextos-de-aplicación}
 
-\newpage
+A continuación planteo algunos contextos concretos en los que las competencias desarrolladas en el marco de este proyecto Erasmus+ encontrarían aplicación directa en mi docencia de Física y Química.
+
+\subsection*{Supuesto 1: Proyecto «La huella hídrica de nuestro centro»}
+
+En 3.º de ESO, podría plantear un proyecto interdisciplinar sobre la huella hídrica del instituto. El alumnado investigaría el consumo de agua en diferentes espacios (aulas, laboratorios, aseos, cafetería), realizaría mediciones y estimaciones y calcularía volúmenes y caudales, conectando con contenidos de física y matemáticas. Paralelamente, analizaría aspectos químicos relacionados con el tratamiento del agua y con la presencia de detergentes y otros contaminantes.
+
+El producto final sería un stand para la feria de ciencia del centro, o para un evento tipo Diverciencia, donde los grupos presentarían maquetas, gráficos, experimentos y propuestas de mejora para reducir el consumo y la contaminación del agua\parencite{diverciencia_descubre,cadenaser_diverciencia2025}. Este supuesto integra ABP, sostenibilidad, trabajo cooperativo, uso de TIC y comunicación pública de resultados.
+
+\subsection*{Supuesto 2: Stand «Energía del agua» en una feria de ciencia}
+
+En 4.º de ESO o 1.º de Bachillerato de Ciencias, podría organizar un proyecto sobre energía hidráulica y aprovechamiento del agua como recurso energético. El alumnado diseñaría pequeños dispositivos (ruedas hidráulicas, turbinas caseras, circuitos sencillos con generadores) y mediría magnitudes físicas como trabajo, potencia y rendimiento.
+
+Una parte del material de difusión se prepararía en inglés: fichas técnicas, vídeos breves o carteles bilingües. El stand en la feria funcionaría como espacio de divulgación científica y, al mismo tiempo, como contexto auténtico para practicar la lengua extranjera\parencite{iesislaverde_k122_2021,ec_keyaction1_2025}.
+
+\subsection*{Supuesto 3: Laboratorio inclusivo con estaciones de aprendizaje}
+
+En 2.º de ESO, con un grupo diverso, podría diseñar sesiones de laboratorio basadas en estaciones de aprendizaje. Cada estación propondría un experimento sencillo de Física o Química (densidad, cambios de estado, reacciones básicas) con distintos niveles de complejidad. El alumnado se organizaría en grupos heterogéneos con roles rotatorios (coordinación, manipulación, registro de datos, seguridad) para garantizar la participación de todos.
+
+Esta organización se inspira en las experiencias de inclusión y trabajo cooperativo observadas en los centros socios, donde la atención a la diversidad se planifica desde el diseño de la actividad y no solo desde la adaptación individual\parencite{iesislaverde_k122_2021}. Al final, los grupos podrían elaborar pequeños pósteres o vídeos sobre una de las estaciones y presentarlos en una mini feria interna o integrarlos en un proyecto Diverciencia.
+
+\subsection*{Supuesto 4: Mini proyecto eTwinning sobre calidad del agua}
+
+Por último, podría lanzar un pequeño proyecto en colaboración con otro centro europeo a través de eTwinning, tomando como referencia el contexto internacional de Diverciencia y los proyectos previos del IES Isla Verde\parencite{iesislaverde_k122_2021}. El alumnado recopilaría muestras de agua de su entorno (grifo, fuentes públicas, espacios naturales) y mediría parámetros como pH, conductividad o turbidez. Los datos se compartirían con el centro socio mediante una plataforma digital y se compararían resultados.
+
+Este trabajo reforzaría la dimensión europea, la competencia digital y la comunicación en lengua extranjera, y podría culminar también en un producto para una feria de ciencia, presencial o virtual. De este modo, la experiencia Erasmus+ trasciende el tiempo de la movilidad y se convierte en una forma habitual de abordar la enseñanza de Física y Química: cooperativa, contextualizada, internacional y orientada a la divulgación científica.
+
 \printbibliography
+
 \end{document}
