--- a/Seminario2_Dustin_Randel_de_Lara_Garcia/referencias.bib
+++ b/Seminario2_Dustin_Randel_de_Lara_Garcia/referencias.bib
@@ -1,11 +1,93 @@
-
-
-@online{LODE1985,
-  title   = {Ley Orgánica 8/1985, de 3 de julio, reguladora del Derecho a la Educación (LODE)},
-  year    = {1985},
-  date    = {1985-07-04},
-  note    = {BOE núm. 159},
-  url     = {https://www.boe.es/buscar/act.php?id=BOE-A-1985-12978},
-  urldate = {2025-11-08}
+@report{sepie_ka122_2021,
+  author       = {{Servicio Espa{\~n}ol para la Internacionalizaci{\'o}n de la Educaci{\'o}n}},
+  title        = {Anexo I.2. Proyectos seleccionados KA122-SCH, convocatoria 2021},
+  year         = {2021},
+  institution  = {SEPIE},
+  url          = {https://sepie.es/doc/convocatoria/2021/resoluciones/octubre/KA1/report_Anexo_I2_KA122_SCH_s.pdf},
+  urldate      = {2025-11-17}
 }
 
+@online{iesislaverde_k122_2021,
+  author       = {{IES Isla Verde}},
+  title        = {Acci{\'o}n Erasmus K122: Watering our Future},
+  year         = {2021},
+  url          = {https://iesislaverde.es/proyecto-erasmus-k122/},
+  urldate      = {2025-11-17},
+  note         = {Entrada en el blog Erasmus del IES Isla Verde}
+}
+
+@online{ec_guide_2022,
+  author       = {{European Commission}},
+  title        = {Erasmus+ Programme Guide 2022},
+  year         = {2022},
+  url          = {https://erasmus-plus.ec.europa.eu/sites/default/files/2021-11/2022-erasmusplus-programme-guide.pdf},
+  urldate      = {2025-11-17}
+}
+
+@online{ec_keyaction1_2025,
+  author       = {{European Commission}},
+  title        = {Key Action 1: Learning Mobility of Individuals},
+  year         = {2025},
+  url          = {https://erasmus-plus.ec.europa.eu/programme-guide/part-b/key-action-1/key-action-1-learning-mobility-of-individuals},
+  urldate      = {2025-11-17}
+}
+
+@online{diverciencia_web,
+  author       = {{Asociaci{\'o}n de Amigos de la Ciencia ``Diverciencia''}},
+  title        = {Diverciencia Algeciras},
+  year         = {2025},
+  url          = {https://www.divercienciaalgeciras.com/},
+  urldate      = {2025-11-17}
+}
+
+@online{diverciencia_descubre,
+  author       = {{Fundaci{\'o}n Descubre}},
+  title        = {Feria de las Ciencias de Algeciras. Jornadas Internacionales de Ciencia en la Calle ``Diverciencia''},
+  year         = {2025},
+  url          = {https://reddeferias.fundaciondescubre.es/ferias-en-la-red/feria-de-las-ciencias-de-algeciras/},
+  urldate      = {2025-11-17}
+}
+
+@online{cadenaser_diverciencia2025,
+  author       = {{Radio Algeciras, Cadena SER}},
+  title        = {Ma{\~n}ana la ciencia toma las calles de Algeciras con Diverciencia 2025},
+  year         = {2025},
+  url          = {https://cadenaser.com/andalucia/2025/05/07/manana-la-ciencia-toma-las-callesde-algeciras-con-diverciencia-2025-radio-algeciras/},
+  urldate      = {2025-11-17}
+}
+
+@online{islaVerde_KA122_application_2021,
+  author   = {{IES Isla Verde}},
+  title    = {KA122-SCH-F295DE69: Mójate por la educación / Watering our Future},
+  year     = {2021},
+  url      = {https://iesislaverde.es/wp-content/uploads/2022/03/KA122-SCH-F295DE69.pdf},
+  urldate  = {2025-11-17},
+  note     = {Solicitud de proyecto Erasmus+ KA122-SCH, convocatoria 2021}
+}
+
+@online{islaVerde_etwinning_waterfuture_2022,
+  author   = {{IES Isla Verde}},
+  title    = {Proyectos eTwinning: Watering our Future (2021--2022)},
+  year     = {2022},
+  url      = {https://iesislaverde.es/proyectos-etwinning/},
+  urldate  = {2025-11-17},
+  note     = {Entrada en la web del IES Isla Verde}
+}
+
+@online{islaVerde_recepcion_opava_2022,
+  author   = {{IES Isla Verde}},
+  title    = {Recepción Slezsk\'e Gymn\'azium (Opava) en Algeciras},
+  year     = {2022},
+  url      = {https://iesislaverde.es/recepcion-slezske-gymnazium-opava-r-checa/},
+  urldate  = {2025-11-17},
+  note     = {Entrada de blog Erasmus del IES Isla Verde}
+}
+
+@online{fundacionDescubre_redDiverciencia_2025,
+  author   = {{Fundaci\'on Descubre}},
+  title    = {Diverciencia. Feria Internacional de la Ciencia en la Calle de Algeciras},
+  year     = {2025},
+  url      = {https://reddeferias.fundaciondescubre.es/ferias-en-la-red/feria-de-las-ciencias-de-algeciras/},
+  urldate  = {2025-11-17},
+  note     = {Red de Ferias de la Ciencia y la Innovaci\'on de Andaluc\'ia}
+}
